--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,12 @@ import Layout from '../layouts/Layout.astro';
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
+<Layout meta={{
+	title: "Home",
+	description: "Welcome to Digital Lyrics Solution",
+	shortDescription: "Digital Lyrics Solution homepage",
+	route: "/",
+	image: "/assets/default-image.png"
+}}>
 	<Welcome />
 </Layout>
