--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -72,7 +72,9 @@ const url = `https://juanjesusrodriguez.com/${route}`;
   </head>
   <StoryblokComponent blok={header} />
 	<body>
-		<slot />
+    <section class="max-w-6xl mx-auto px-4 py-10">
+		  <slot />
+    </section>
 	</body>
 </html>
 
