--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,11 @@
 ---
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import type { StoryblokImage } from '../types/StoryblokImage';
+import type { StoryblokUrl } from '../types/StoryblokUrl';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout meta={{
-	title: "Home",
-	description: "Welcome to Digital Lyrics Solution",
-	shortDescription: "Digital Lyrics Solution homepage",
-	route: "/",
-	image: "/assets/default-image.png"
-}}>
-	<Welcome />
-</Layout>
+<Welcome />
