--- a/src/pages/videos.astro
+++ b/src/pages/videos.astro
@@ -10,7 +10,7 @@ import type { StoryblokHeader } from '../types/StoryblokHeader';
 
 
 const storyblokApi = useStoryblokApi()
-const { data } = await storyblokApi.get('cdn/stories/home', {
+const { data } = await storyblokApi.get('cdn/stories/videos', {
   version: 'draft',
 })
 
@@ -18,6 +18,7 @@ const story = data.story
 const { content } = story
 const meta: StoryblokMeta = (getComponent('meta', content.Header) as StoryblokMeta);
 const header: StoryblokHeader = (getComponent('header', content.Header) as StoryblokHeader);
+console.log("content", content.body)
 ---
 
 <Layout meta={meta} header={header}>
