--- a/src/storyblok/gallerySection.astro
+++ b/src/storyblok/gallerySection.astro
@@ -12,7 +12,7 @@ console.log("Gallery Section props:", blok.photoList);
 <section class="max-w-7xl mx-auto px-6 py-10">
   <h1 class="text-3xl font-semibold mb-12 text-center">{title}</h1>
   <div class="columns-2 xl:columns-3 md:columns-3 gap-4 sm:gap-2 [column-fill:_balance]">
-    {blok.photoList.map(item => (
+    {blok.photoList.map((item: unknown) => (
       <div class="break-inside-avoid mb-4">
         <GalleryItem image={item} />
       </div>
