--- a/src/storyblok/reviewSection.astro
+++ b/src/storyblok/reviewSection.astro
@@ -5,9 +5,8 @@ const { blok } = Astro.props;
 ---
 <section class="max-w-4xl mx-auto px-6">
   {blok.title && <h1 class="text-3xl md:text-4xl font-semibold mb-8">{blok.title}</h1>}
-  {blok.intro && <div class="prose max-w-3xl mb-10" set:html={blok.intro} />}
 
-  <div class="space-y-12">
+  <div class="space-y-12 m-9">
     {Array.isArray(blok.group) && blok.group.map((g: SbBlokData) => <StoryblokComponent blok={g} />)}
   </div>
 </section>
