--- a/src/storyblok/biography.astro
+++ b/src/storyblok/biography.astro
@@ -21,8 +21,8 @@ console.log(pressDossier)
         })()}
         {pressDossier?.filename && (
             <a
-                href={pressDossier.filename}
-                download
+                href="https://drive.google.com/drive/folders/10VCOXjkb74_fQ6EwCW6bLq6Wz8jaYyQs?usp=sharing"
+                target="_blank"
                 class="block mt-8 text-blue-600 underline hover:text-blue-800"
             >
                 Dosier de prensa
