--- a/src/storyblok/section.astro
+++ b/src/storyblok/section.astro
@@ -28,12 +28,16 @@ const { title, description, descriptionColor, image, readMoreLabel, readMoreLink
                 })()}
             </div>
         )}
+        {console.log("readMoreLink", readMoreLink)}
         <div class="flex flex-col space-y-4" style={`color: ${linkColor};`}>
             {readMoreLink.url.length > 0 && (
-                <a href={readMoreLink} class="text-xl transition hover:text-under-400 hover:brightness-125">{readMoreLabel} ></a>
+                <a href={readMoreLink.url} class="text-xl transition hover:text-under-400 hover:brightness-125">{readMoreLabel} ></a>
+            )}
+            {readMoreLink.cached_url.length > 0 && (
+                <a href={readMoreLink.cached_url} class="text-xl transition hover:text-under-400 hover:brightness-125">{readMoreLabel} ></a>
             )}
             {otherLink.url.length > 0 && (
-                <a href={otherLink} class="text-xl transition hover:text-under-400 hover:brightness-125">{otherLinkLabel} ></a>
+                <a href={otherLink.url} class="text-xl transition hover:text-under-400 hover:brightness-125">{otherLinkLabel} ></a>
             )}
         </div>
     </div>
