--- a/src/storyblok/menuItem.astro
+++ b/src/storyblok/menuItem.astro
@@ -3,9 +3,10 @@ const { blok } = Astro.props
 const {label, link} = blok
 const url = new URL(Astro.request.url);
 const isEn = url.pathname.split('/').includes('en');
+
 ---
 
 <li class="text-center">
 
-    <a href={isEn ? `/en/${link.cached_url}` : link.cached_url} class="hover:underline text-black">{label}</a>
+    <a href={isEn ? `en/${link.cached_url}` : link.cached_url} class="hover:underline text-black">{label}</a>
 </li>
