--- a/src/storyblok/menuItem.astro
+++ b/src/storyblok/menuItem.astro
@@ -8,5 +8,5 @@ const isEn = url.pathname.split('/').includes('en');
 
 <li class="text-center">
 
-    <a href={isEn ? `en/${link.cached_url}` : link.cached_url} class="hover:underline text-black">{label}</a>
+    <a href={isEn ? `/en/${link.cached_url}` : `/${link.cached_url}`} class="hover:underline text-black">{label}</a>
 </li>
